--- a/src/components/TodoComponents/Todo.css
+++ b/src/components/TodoComponents/Todo.css
@@ -1,11 +1,60 @@
+* {
+	box-sizing: border-box;
+}
+
+body {
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	padding: 0;
+	background-color: #303a52;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+div,
+p,
+span {
+	color: white;
+	font-family: "Roboto", sans-serif;
+}
+
 .App {
+	margin: 50px auto;
+	max-width: 600px;
+	/* border: 2px solid rebeccapurple; */
+	display: flex;
+	flex-flow: row wrap;
+	box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
+}
+
+.header {
+	/* border: 2px solid salmon; */
+	width: 100%;
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+}
+
+.tasks {
+	/* border: 2px solid black; */
+	width: 100%;
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: space-evenly;
+	width: 100%;
 	margin: 0 auto;
-	width: 500px;
 }
 
 .todo {
-	background-color: deepskyblue;
-	width: 200px;
+	background-color: #9e579d;
+	width: 35%;
+	height: 50px;
+	color: aliceblue;
 	text-align: left;
 	margin: 4px 0;
 	padding-left: 8px;
@@ -15,4 +64,26 @@
 .todo.completed {
 	background-color: skyblue;
 	text-decoration: line-through;
+}
+
+form input {
+	margin-right: 5px;
+	background-color: #303a52;
+	border: 0;
+	outline: 0;
+	border-bottom: 1px solid #9e579d;
+	color: white;
+}
+
+button {
+	background-color: #574b90;
+	border: 1px solid #574b90;
+	color: white;
+	font-size: 16px;
+	padding: 6px 14px;
+	cursor: pointer;
+}
+
+.clear-btn {
+	margin: 15px 0 15px 60px;
 }
