--- a/src/components/TodoComponents/Todo.scss
+++ b/src/components/TodoComponents/Todo.scss
@@ -77,7 +77,13 @@ form input {
 }
 
 .search {
-	margin: 15px 0 15px 60px;
+	input {
+		margin: 15px 0 15px 60px;
+		border: 0;
+		outline: 0;
+		border-bottom: 1px solid #9e579d;
+		background-color: #303a52;
+	}
 }
 
 button {
