--- a/src/components/TodoComponents/Todo.scss
+++ b/src/components/TodoComponents/Todo.scss
@@ -34,7 +34,7 @@ span {
 }
 
 .header {
-	/* border: 2px solid salmon; */
+	// border: 2px solid salmon;
 	width: 100%;
 	display: flex;
 	justify-content: space-between;
@@ -61,6 +61,12 @@ span {
 	margin: 4px 0;
 	padding-left: 8px;
 	cursor: pointer;
+	transition: all 0.2s ease-in;
+	&:hover {
+		transform: translateY(-1px);
+		box-shadow: 0 -1px 0 #fff, 0 0 2px rgba(0, 0, 0, 0.12),
+			0 2px 4px rgba(0, 0, 0, 0.24);
+	}
 }
 
 .todo.completed {
@@ -96,6 +102,9 @@ button {
 	font-size: 16px;
 	padding: 6px 14px;
 	cursor: pointer;
+	&:hover {
+		background-color: lighten(#574b90, 5%);
+	}
 }
 
 .clear-btn {
